fix flag align, notes trim and validate

--- a/src/app/components/elements/FlagButton.scss
+++ b/src/app/components/elements/FlagButton.scss
@@ -21,5 +21,5 @@
 
   .flag__button--post {
     position: absolute;
-    right: 0;
+    right: 1em;
   }
